# OpenGlLearn

./: .gitignore  CMakeLists.txt  LearnOpenGL1.sln  LearnOpenGL1.vcxproj  LearnOpenGL1.vcxproj.filters  roadmap.txt
Scripts/: Camera.h  Game.cpp  Game.h  Globals.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelObject.cpp  ModelObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  TestScene.cpp  TestScene.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  WindowManager.h  filesystem.h  main.cpp  pch.h
Scripts/Managers/: GameObject.cpp  GameObject.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  WindowManager.cpp  WindowManager.h
Scripts/Shaders/: ex1.fs  ex1.vs  model.fs  model.vs  object.fs  object.vs
include/glad/: glad.h
includes/: glad.c
includes/assimp/: revision.h
src/: Shader.cpp  Shader.h  main.cpp
src/shaders/: ex1.fshader  ex1.vshader  fragment.glsl
